Move some functionality to separate class